# agentic_quant_platform

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Agentic Quant Platform Enhancement Plan.docx  Agentic Quant Platform Enhancement Plan.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PROMPT.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.viz.yml  docker-compose.yml  pyproject.toml  response.json
.cursor/rules/: aqp.mdc  data-pipelines.mdc
.github/workflows/: webui.yml
alembic/: env.py
alembic/versions/: 0001_paper_trading_runs.py  0002_strategy_versions_tests.py  0003_optimizer_and_crew.py  0004_quant_ml_planning.py  0005_flink_trading_schema.py  0006_agentic_trading.py  0007_data_plane_expansion.py  0008_domain_model_expansion.py  0009_judge_replay_interrupts.py  0010_feature_sets_equity_reports.py  0011_iceberg_catalog_columns.py  0012_agents_rag_memory.py  0013_data_engine_expansion.py  0014_airbyte_data_fabric.py  0015_dbt_foundation.py  0016_extraction_metadata.py  0017_tenancy_foundation.py  0018_resource_ownership.py  0019_ownership_enforce.py  0020_bots.py  0020_data_control_metadata.py  0021_default_tenancy_normalization.py  0022_mlops_experiment_runs.py  0023_merge_data_control_branch.py  0024_data_layer_expansion.py  0025_ml_alpha_backtest_linkage.py
aqp/: __init__.py  config.py
aqp/agents/: __init__.py  capabilities.py  capability_runtime.py  crew.py  evaluation.py  observability.py  registry.py  roles.py  runtime.py  spec.py
aqp/api/: __init__.py  deps.py  main.py  schemas.py
aqp/auth/: __init__.py  context.py  deps.py  user.py
aqp/backtest/: __init__.py  aat_engine.py  agentic_metrics.py  base.py  benchmarks.py  broker_sim.py  bt_engine.py  capabilities.py  components.py  corporate_actions.py  engine.py  fallback_engine.py  hft_metrics.py  history.py  interrupts.py  llm_judge.py  local_simulation.py  metrics.py  monte_carlo.py  optimizer.py  replay.py  result_handler.py  runner.py  scheduled_events.py  vectorbt_backend.py  vectorbt_engine.py  vectorbtpro_engine.py  vectorized.py  walk_forward.py  zvt_engine.py
aqp/bots/: __init__.py  base.py  cli.py  deploy.py  registry.py  research_bot.py  runtime.py  spec.py  trading_bot.py
aqp/cli/: __init__.py  config_cmd.py  main.py  viz_cmd.py
aqp/config/: __init__.py  defaults.py  layered.py  settings.py
aqp/core/: __init__.py  corporate_actions.py  events.py  exchange_hours.py  indicators.py  indicators_extra.py  interfaces.py  memory.py  registry.py  slice.py  types.py
aqp/dagster/: __init__.py  alphavantage_intraday.py  definitions.py  jobs.py  partitions.py  resources.py  schedules.py  sensors.py
aqp/data/: __init__.py  arctic_store.py  bars.py  cache.py  catalog.py  chroma_store.py  cv.py  duckdb_engine.py  expressions.py  factor_lib.py  factors.py  feature_catalog.py  feature_engineer.py  feature_sets.py  fracdiff.py  fundamentals.py  ibkr_historical.py  iceberg_catalog.py  iceberg_consolidate.py  indicators_zoo.py  ingestion.py  model_prediction.py  parquet_inspector.py  subscription.py  talib_catalog.py
aqp/llm/: __init__.py  memory.py  ollama_client.py  prompts.py  tokens.py  vllm_runner.py
aqp/ml/: __init__.py  alpha_backtest_experiment.py  alpha_metrics.py  base.py  bet_sizing.py  dataset.py  experiments.py  factor_eval.py  flows.py  handler.py  importance.py  loader.py  pipeline_recipes.py  planning.py  processors.py  recorder.py  sampling.py  splits.py  walk_forward.py
aqp/mlops/: __init__.py  autolog.py  lineage.py  lineage_bridge.py  metrics.py  (+3 more)
configs/: default.yaml
data/: openapi.json
docs/: agentic-pipeline.md  agents.md  alpha-vantage.md  analysis-agents.md  architecture.md  backtest-engines.md  bots.md  class-diagram.md  core-types.md  dagster.md  data-catalog.md  data-dictionary.md  data-engine.md  data-pipelines-hub.md  data-plane.md  datahub-sync.md  domain-model.md  entity-graph-services.md  entity-registry.md  erd.md  factor-research.md  flows.md  glossary.md  index.md  live-market.md  ml-alpha-backtest.md  ml-builder.md  ml-flows.md  ml-framework.md  ml-libraries.md  ml-preprocessing-pipeline.md  ml-testing.md  observability.md  paper-trading.md  providers.md  rag.md  regulatory-data.md  research-agents.md  selection-agents.md  strategy-browser.md  (+7 more)
extractions/: INDEX.md  _KNOWN_ISSUES.md
notebooks/: 01_quickstart.ipynb  02_data_discovery.ipynb  03_agentic_workflow.ipynb  04_rl_training.ipynb  phase1_portfolio_and_factors.ipynb  phase2_model_zoo.ipynb  phase3_rl_agents.ipynb  phase4_llm_agents.ipynb  phase5_deployment_demo.ipynb
scripts/: _debug_backtest.py  _debug_otel.py  _demo_search.py  _director_smoke.py  _run_one_source.py  bootstrap.py  download_data.py  export_openapi.py  gen_webui_client.ps1  gen_webui_client.sh  iceberg_smoke.py  index_metadata.py  ingest_regulatory.py  run_backtest.py  run_crew.py  start.ps1  start.sh  status.ps1  status.sh  stop.ps1  stop.sh  train_agent.py  validate_ingest_local.py
tests/: conftest.py  four_source_random.py  test_agentic_alpha.py  test_agentic_metrics.py  test_agentic_models_routes.py  test_agentic_orchestration.py  test_agentic_types.py  test_agents.py  test_alpaca_brokerage.py  test_alpha_backtest_experiment.py  test_alpha_metrics.py  test_api.py  test_api_paper.py  test_backtest.py  test_backtest_agent_tools.py  test_backtest_components.py  test_backtest_engines.py  test_brokers_route.py  test_capability_runtime.py  test_cli.py  test_core.py  test_core_types_lean.py  test_corporate_actions.py  test_data.py  test_data_cache.py  test_data_layer_control.py  test_data_universe_routes.py  test_dataset_catalog_registration.py  test_decision_cache.py  test_deployed_model_alpha.py  test_discrete_env.py  test_e2e_backtest.py  test_engine_interrupt.py  test_ensemble_alpha.py  test_equity_sections.py  test_event_bus.py  test_event_replay.py  test_exchange_hours.py  test_factor_eval.py  test_feature_sets.py  (+52 more)
webui/: .dockerignore  .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
(+1253 files in other folders)
