[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-quant-platform"
version = "0.1.0"
description = "Local-first agentic quantitative research and trading platform (Agent-Ops + RL-Ops)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Agentic Quant Platform" }]
keywords = ["quant", "trading", "reinforcement-learning", "agents", "crewai", "ollama", "mlops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core service layer.
    # fastapi pinned <0.116 because Solara 1.x requires starlette<0.46
    # while newer FastAPI demands starlette>=0.46.
    "fastapi>=0.110,<0.116",
    "starlette<0.46",
    "uvicorn[standard]>=0.27",
    "celery>=5.3",
    "redis>=5.0",
    "httpx>=0.27",
    "websockets>=12.0",
    # Persistence
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    # Config
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    # Data tier
    "duckdb>=0.10",
    "pandas>=2.1",
    "pyarrow>=15.0",
    "numpy>=1.26",
    "yfinance>=0.2.37",
    "chromadb>=0.4.22",
    # Agents / LLM
    "crewai>=0.28.0",
    "litellm>=1.30",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.5",
    # RL
    "gymnasium>=0.29",
    "stable-baselines3>=2.2",
    "torch>=2.1",
    # Backtest / analytics
    "backtrader>=1.9.78",
    "quantstats>=0.0.62",
    "scipy>=1.11",
    # MLOps
    "mlflow>=2.11",
    # UI
    "solara>=1.30",
    "plotly>=5.19",
    # anywidget is an *optional* Plotly dep that its `FigureWidget` class
    # imports lazily. Solara's `FigurePlotly` renders via FigureWidget, so
    # without anywidget every page that draws a Plotly chart crashes with
    # ``ModuleNotFoundError: No module named 'anywidget'``.
    "anywidget>=0.9",
    "dash>=2.15",
    # CLI + resilience (used by the unified `aqp` CLI and broker adapters)
    "typer>=0.12",
    "tenacity>=8.2",
]

[project.optional-dependencies]
arcticdb = ["arcticdb>=4.4"]
# Paper/live brokerage adapters — each adapter is opt-in so the base install stays lean.
alpaca = ["alpaca-py>=0.25"]
ibkr = ["ib-async>=1.0"]
tradier = []  # uses base httpx; listed for symmetry + future pin points
# OpenTelemetry tracing stack — auto-instruments FastAPI, Celery, SQLAlchemy, HTTPX, Redis.
otel = [
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-celery>=0.46b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
    "opentelemetry-instrumentation-httpx>=0.46b0",
    "opentelemetry-instrumentation-redis>=0.46b0",
]
paper = ["tenacity>=8.2"]
cli = ["typer[all]>=0.12"]
# Kafka streaming producers/consumers + Avro serialization + Prometheus metrics.
streaming = [
    "confluent-kafka>=2.5",
    "aiokafka>=0.11",
    "fastavro>=1.9",
    "prometheus-client>=0.20",
    "aiohttp>=3.9",
]
# Vectorized/event-driven third-party backtest engines (Phase 2 adapters).
vectorbt = ["vectorbt>=0.26", "numba>=0.58"]
backtesting = ["backtesting>=0.3.3", "bokeh>=3.1"]
# Classical ML stack (trees + linear + sklearn + pandas-ta bridge).
# PyPI ``pandas-ta`` 0.4.x requires Python >=3.12; use community classic for 3.11.
ml = [
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "catboost>=1.2",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "pandas-ta-classic>=0.3.15",
]
# Deep-learning / PyTorch model zoo (Tier A LSTM/GRU/ALSTM/Transformer/TCN/TabNet).
ml-torch = ["torch>=2.1", "pytorch-tabnet>=4.1"]
# Optional graph-learning extras for Tier B GATs/HIST-style models.
ml-graph = ["torch-geometric>=2.5"]
# Classical + modern time-series forecasters (statsmodels already in `ml`).
ml-forecast = [
    "prophet>=1.1.5",
    "sktime>=0.29",
    "pmdarima>=2.0",
]
# Outlier / anomaly detection pipeline steps (feature cleaning + risk gating).
ml-anomaly = ["pyod>=1.1.3"]
# Portfolio optimization backends (PyPortfolioOpt uses cvxpy for CVaR /
# semivariance / CDaR / Efficient Frontier).
portfolio = ["PyPortfolioOpt>=1.5.5", "cvxpy>=1.4", "ecos>=2.0", "scs>=3.2"]
# mlfinlab-style labeling + structural bars + fracdiff (native implementations
# inspired by the hudson-and-thames book — no paid dependency).
ml-structural = ["numba>=0.58"]
# Ray Serve backend for model deployments.
serving-ray = ["ray[serve]>=2.10", "fastapi>=0.110,<0.116"]
# TorchServe backend for model deployments.
serving-torch = [
    "torch>=2.1",
    "torchserve>=0.10",
    "torch-model-archiver>=0.10",
]
# MLflow-native serving (mlflow models serve + MLServer optional).
serving-mlflow = ["mlflow>=2.11", "mlserver>=1.4", "mlserver-mlflow>=1.4"]
# Umbrella: wire every serving backend.
serving = [
    "agentic-quant-platform[serving-mlflow,serving-ray,serving-torch]",
]
# FinGPT / FinBERT LLM-based sentiment + forecasting (Phase 4).
llm-finance = [
    "transformers>=4.40",
    "accelerate>=0.30",
    "peft>=0.11",
    "sentencepiece>=0.2",
]
# FinRobot / TradingAgents autogen orchestration (Phase 4).
llm-agents = [
    "pyautogen>=0.2.30",
    "autogen-agentchat>=0.2.30",
    "langchain>=0.2",
]
# ---------------------------------------------------------------------------
# Data-plane expansion: FRED / SEC EDGAR / GDelt adapters (Phase 2-4 extras).
# Keep each dependency minimal so users can install just what they need.
# ---------------------------------------------------------------------------
fred = ["fredapi>=0.5.2"]
sec = ["edgartools>=5.0"]
gdelt = ["aiohttp>=3.9", "aiofiles>=24.1"]
gdelt-bq = ["google-cloud-bigquery>=3.22"]
data-plane = [
    "agentic-quant-platform[fred,sec,gdelt]",
]
full = [
    "agentic-quant-platform[alpaca,ibkr,tradier,otel,cli,paper,streaming,vectorbt,backtesting,ml,ml-torch,ml-forecast,ml-anomaly,portfolio,ml-structural,serving,llm-finance,fred,sec,gdelt]",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "vcrpy>=6.0",
    "hypothesis>=6.100",
    "ruff>=0.3",
    "mypy>=1.8",
    "ipykernel>=6.29",
]

[project.scripts]
aqp = "aqp.cli.main:app"
aqp-bootstrap = "scripts.bootstrap:main"
aqp-download = "scripts.download_data:main"
aqp-index = "scripts.index_metadata:main"
aqp-train = "scripts.train_agent:main"
aqp-backtest = "scripts.run_backtest:main"
aqp-stream-ingest = "aqp.streaming.cli:main"

[tool.setuptools.packages.find]
include = ["aqp*"]
exclude = ["tests*", "notebooks*", "data*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Typer uses function-call defaults (typer.Option / typer.Argument) as its
# documented idiom, which otherwise triggers B008.
"aqp/cli/*.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
