[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-quant-platform"
version = "0.1.0"
description = "Local-first agentic quantitative research and trading platform (Agent-Ops + RL-Ops)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Agentic Quant Platform" }]
keywords = ["quant", "trading", "reinforcement-learning", "agents", "crewai", "ollama", "mlops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core service layer.
    # fastapi pinned <0.116 because Solara 1.x requires starlette<0.46
    # while newer FastAPI demands starlette>=0.46.
    "fastapi>=0.110,<0.116",
    "starlette<0.46",
    "uvicorn[standard]>=0.27",
    "celery>=5.3",
    "redis>=5.0",
    "httpx>=0.27",
    "websockets>=12.0",
    # Persistence
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    # Config
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    # Data tier
    "duckdb>=0.10",
    "pandas>=2.1",
    "polars>=1.0",
    "pyarrow>=16.0",
    "numpy>=1.26",
    "yfinance>=0.2.37",
    "chromadb>=0.4.22",
    # Agents / LLM
    "crewai>=0.28.0",
    "litellm>=1.30",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.5",
    # RL
    "gymnasium>=0.29",
    "stable-baselines3>=2.2",
    "torch>=2.1",
    # Backtest / analytics
    "backtrader>=1.9.78",
    "quantstats>=0.0.62",
    "scipy>=1.11",
    # MLOps
    "mlflow>=2.11",
    # UI
    "solara>=1.30",
    "plotly>=5.19",
    "anywidget>=0.9",
    "dash>=2.15",
    # CLI + resilience
    "typer>=0.12",
    "tenacity>=8.2",
]

[project.optional-dependencies]
arcticdb = ["arcticdb>=4.4"]
dagster = ["dagster>=1.7.0"]
alpaca = ["alpaca-py>=0.25"]
ibkr = ["ib-async>=1.0"]
tradier = []
otel = [
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-celery>=0.46b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
    "opentelemetry-instrumentation-httpx>=0.46b0",
    "opentelemetry-instrumentation-redis>=0.46b0",
]
paper = ["tenacity>=8.2"]
cli = ["typer[all]>=0.12"]
streaming = [
    "confluent-kafka>=2.5",
    "aiokafka>=0.11",
    "fastavro>=1.9",
    "prometheus-client>=0.20",
    "aiohttp>=3.9",
]
vectorbt = ["vectorbt>=0.26", "numba>=0.58"]
backtesting = ["backtesting>=0.3.3", "bokeh>=3.1"]
ml = [
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "catboost>=1.2",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "pandas-ta-classic>=0.3.15",
]
ml-torch = ["torch>=2.1", "pytorch-tabnet>=4.1"]
ml-graph = ["torch-geometric>=2.5"]
ml-forecast = [
    "prophet>=1.1.5",
    "sktime>=0.29",
    "pmdarima>=2.0",
]
ml-anomaly = ["pyod>=1.1.3"]
portfolio = ["PyPortfolioOpt>=1.5.5", "cvxpy>=1.4", "ecos>=2.0", "scs>=3.2"]
ml-structural = ["numba>=0.58"]
serving-ray = ["ray[serve]>=2.10", "fastapi>=0.110,<0.116"]
serving-torch = [
    "torch>=2.1",
    "torchserve>=0.10",
    "torch-model-archiver>=0.10",
]
serving-mlflow = ["mlflow>=2.11", "mlserver>=1.4", "mlserver-mlflow>=1.4"]
serving = [
    "agentic-quant-platform[serving-mlflow,serving-ray,serving-torch]",
]
llm-finance = [
    "transformers>=4.40",
    "accelerate>=0.30",
    "peft>=0.11",
    "sentencepiece>=0.2",
]
llm-agents = [
    "pyautogen>=0.2.30",
    "autogen-agentchat>=0.2.30",
    "langchain>=0.2",
]

# ---------------------------------------------------------------------------
# Data-plane expansion: FRED / SEC EDGAR / GDelt adapters.
# ---------------------------------------------------------------------------
fred = ["fredapi>=0.5.2"]
sec = ["edgartools>=5.0"]
gdelt = ["aiohttp>=3.9", "aiofiles>=24.1"]
gdelt-bq = ["google-cloud-bigquery>=3.22"]
iceberg = [
    "pyiceberg[s3fs,sql-sqlite]>=0.7",
    "s3fs>=2024.5",
    "ijson>=3.2",
]

# ---------------------------------------------------------------------------
# Phase 2 (agentic-RAG expansion): regulatory data adapters.
# CFPB + FDA use httpx (already in core deps); USPTO PEDS XML uses xmltodict.
# ---------------------------------------------------------------------------
regulatory = [
    "xmltodict>=0.13",
]

# ---------------------------------------------------------------------------
# Phase 1 + Phase 5 (agentic-RAG expansion): hierarchical Redis RAG +
# LangGraph orchestration. The base ``redis`` and ``sentence-transformers``
# pins are already in core deps; this extra adds the optional reranker,
# RAPTOR clustering, and LangGraph state machine.
# ---------------------------------------------------------------------------
agents-rag = [
    "redis[hiredis]>=5.0",
    "umap-learn>=0.5",
    "scikit-learn>=1.4",
    "FlagEmbedding>=1.2",
    "langgraph>=0.2",
    "tiktoken>=0.7",
]

# ---------------------------------------------------------------------------
# Data fabric expansion — pluggable compute backends, broader source
# library, hybrid Dagster code location, DataHub bidirectional sync.
# Heavy optional deps; gated by import-time fallbacks so a missing extra
# downgrades the engine to ``LocalBackend`` with a warning.
# ---------------------------------------------------------------------------
compute-dask = [
    "dask[distributed,dataframe]>=2024.5",
    "bokeh>=3.1",
]
compute-ray = [
    "ray[data]>=2.10",
]
compute = [
    "agentic-quant-platform[compute-dask,compute-ray]",
]

# Broader source library deps (FinanceDatabase / akshare / coingecko etc).
sources = [
    "aiofiles>=24.1",
    "boto3>=1.34",
    "google-cloud-storage>=2.16",
    "azure-storage-blob>=12.19",
]

# DataHub bidirectional emitter + GMS client.
datahub-sync = [
    "acryl-datahub[datahub-rest]>=0.13",
]

# Local dbt + DuckDB modeling runtime. Kept optional so the core API can
# start without dbt installed in lean service images.
dbt = [
    "dbt-core>=1.8",
    "dbt-duckdb>=1.8",
]

# Dagster code-location runtime for AQP. Lighter than the full Dagster
# install: just enough to expose ``Definitions`` over gRPC.
dagster-aqp = [
    "dagster>=1.7.0",
    "dagster-graphql>=1.7.0",
    "dagster-postgres>=0.23",
    "dagster-k8s>=0.23",
]

data-plane = [
    "agentic-quant-platform[fred,sec,gdelt,iceberg,regulatory]",
]
data-fabric = [
    "agentic-quant-platform[data-plane,compute,sources,datahub-sync,dagster-aqp,dbt]",
]
full = [
    "agentic-quant-platform[alpaca,ibkr,tradier,otel,cli,paper,streaming,vectorbt,backtesting,ml,ml-torch,ml-forecast,ml-anomaly,portfolio,ml-structural,serving,llm-finance,fred,sec,gdelt,iceberg,regulatory,agents-rag,compute,sources,datahub-sync,dagster-aqp,dbt]",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "vcrpy>=6.0",
    "hypothesis>=6.100",
    "ruff>=0.3",
    "mypy>=1.8",
    "ipykernel>=6.29",
]

[project.scripts]
aqp = "aqp.cli.main:app"
aqp-bootstrap = "scripts.bootstrap:main"
aqp-download = "scripts.download_data:main"
aqp-index = "scripts.index_metadata:main"
aqp-train = "scripts.train_agent:main"
aqp-backtest = "scripts.run_backtest:main"
aqp-stream-ingest = "aqp.streaming.cli:main"

[tool.setuptools.packages.find]
include = ["aqp*"]
exclude = ["tests*", "notebooks*", "data*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"aqp/cli/*.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
